<resources>
    <string name="app_name">Bula</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_store">Image store</string>
    <string name="title_activity_store">Loja</string>
    <string name="title_activity_buy">Compra</string>
    <string name="insira_a_quantidade">Insira a quantidade</string>
    <string name="sua_compra">Sua compra</string>
    <string name="qunatidade">Qunatidade</string>
    <string name="telefone">Telefone</string>
    <string name="entre_com_a_senha">Entre com a senha</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="email">Email</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="usu_rio_ou_email">Usuário ou Email</string>
    <string name="clique_aqui_para_alterar">Clique aqui para alterar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="insira_seu_email_aqui">Insira seu email aqui</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="insira_sua_mensagem_aqui">Insira sua mensagem aqui</string>
    <string name="o_que_voce_precisa_agora">O que você precisa agora?</string>
    <string name="endereco_entrega">Endereço entrega</string>
    <string name="horário_do_pedido">Horário do pedido</string>
    <string name="outros">Outros</string>
    <string name="elo">Elo</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="concluir_compra">Concluir Compra</string>
    <string name="precisa_de_troco">Troco para?</string>
    <string name="para_quanto">Para quanto?</string>
    <string name="modo_de_pagamento">Modo de pagamento</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao">Cartão</string>
    <string name="produto">Produto</string>
    <string name="custo_total">Custo total produtos</string>
    <string name="custo_envio">Custo envio </string>
    <string name="por_no_carrinho">Por no carrinho</string>
    <string name="principio_ativo">Principio ativo*</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="toque_na_imagem_para_altera_la">Toque na imagem para alterá-la</string>
    <string name="altere_abaixo_o_texto">Altere abaixo o texto</string>
    <string name="n_o_definido">não definido</string>
    <string name="endere_o">Endereço</string>
    <string name="meu_carrinho">Meu Carrinho</string>
    <string name="minhas_compras">Minhas compras</string>
    <string name="a_imagem_abaixo_est_boa">A imagem abaixo está boa?</string>
    <string name="bot_o_para_atualizar_a_foto">Botão para atualizar a foto</string>
    <string name="bandeira">Bandeira</string>
    <string name="data_nascimento">Data nascimento 08/02/1990</string>
    <string name="avalie_abaixo_sua_compra">Avalie abaixo sua compra</string>
    <string name="loja">Loja</string>
    <string name="sua_opini_o">Sua opinião</string>
    <string name="enviar_avalia_o">Enviar avaliação</string>
    <string name="sua_avalia_o">Sua avaliação</string>
    <string name="o_que_dizem_sobre_n_s">O que dizem sobre nós:</string>
    <string name="r_0_00">R$0,00</string>
    <string name="quantidade">Quantidade</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="observacao">Observação</string>
    <string name="obs">Bata na porta, melhor em outro horário</string>
    <string name="escolha_o_departamento">! Escolha o departamento abaixo:</string>
    <string name="entre_com_o_nome_do_produto">Entre com o nome do produto:</string>
    <string name="ola">Olá</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="imagem_obtida_da_memoria">Imagem obtida da memória</string>
    <string name="comprar_agora">Compre agora - R$</string>
    <string name="remover_do_carrinho">Remover do carrinho</string>
    <string name="o_que_fazer_com">O que você deseja fazer com</string>
    <string name="para_comprar_agora_defina_a_quantidade">Para comprar agora defina a quantidade</string>
    <string name="comprar_agora_2">Comprar agora</string>
    <string name="voltar">Voltar</string>
    <string name="avaliar_compra">Avaliar compra</string>
    <string name="descricao">Descrição</string>
    <string name="indicacao">Indicação*</string>
    <string name="default_notification_channel_id">default</string>
    <string name="channel_description">notification channel</string>
    <string name="channel_name">notification channel</string>

</resources>
