<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_item_cart"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:text="@string/para_comprar_agora_defina_a_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <NumberPicker
            android:id="@+id/number_picker_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/comprar_agora_2"
            android:id="@+id/buy_now_item"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:background="@drawable/background_button_rounded"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/remover_do_carrinho"
            android:id="@+id/delete_item"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:background="@drawable/background_button_rounded"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/voltar"
            android:id="@+id/cancel"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:background="@drawable/background_button_rounded"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>