<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/quantidade"
        android:id="@+id/header_buy"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <NumberPicker
            android:id="@+id/number_picker_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/confirmar"
            android:id="@+id/confirm"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:background="@drawable/background_button_rounded"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/cancelar"
            android:id="@+id/cancel"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_rounded"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>