<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicine.activities.Medicine">

    <include layout="@layout/action_bar_general"/>

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/header_Medicine"
                android:padding="16dp"
                android:background="@color/green"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_medicine"
                    android:layout_centerInParent="true"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/value_send_medicine"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:drawableStart="@drawable/ic_capacete"
                    android:drawablePadding="5dp"
                    android:background="@drawable/background_button_rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/value_medicine"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_shopping_cart"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/por_no_carrinho"
                    android:onClick="addToCart"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/background_button_green_rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <LinearLayout
                android:layout_below="@id/header_Medicine"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_marginTop="16dp"
                    android:id="@+id/card_store_medicine"
                    android:onClick="goToStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="Loja"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/medicine_store"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:onClick="showProduct"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/descricao"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/medicine_description"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginTop="16dp"
                    android:onClick="showAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/indicacao"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/medicine_utilization"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginTop="16dp"
                    android:onClick="showAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="Contra indicação*"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/medicine_indication"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginTop="16dp"
                    android:onClick="showAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/principio_ativo"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/medicine_active"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/buy_now"
                android:layout_below="@id/header_Medicine"
                android:layout_marginTop="-30dp"
                android:textColor="#ffffffff"
                android:background="@drawable/background_button_green_rounded"
                android:layout_centerHorizontal="true"
                android:onClick="buyNow"
                android:textSize="20sp"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

       <!--     <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/buy_now"
                android:layout_below="@id/header_Medicine"
                android:elevation="2dp"
                android:gravity="center"
                android:onClick="buyNow"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Comprar agora"
                    android:id="@+id/text_buy"
                    android:visibility="invisible"
                    android:padding="10dp"
                    android:background="@drawable/background_button_green_rounded"
                    android:textColor="#ffffff"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.FloatingActionButton

                    android:elevation="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:background="@color/green"
                    app:srcCompat="@drawable/ic_check_white_24dp"/>

            </LinearLayout> -->


        <!--    <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/add_cart"
                android:onClick="addToCart"
                android:layout_below="@id/header_Medicine"
                android:elevation="2dp"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_cart"
                    android:text="Adicionar ao carrinho"
                    android:padding="10dp"
                    android:visibility="invisible"
                    android:background="@drawable/background_button_rounded"
                    android:textColor="#ffffff"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.FloatingActionButton
                    android:elevation="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:background="@color/colorAccent"
                    app:srcCompat="@drawable/ic_shopping_cart"/>

            </LinearLayout> -->

  <!--          <android.support.design.widget.FloatingActionButton
                android:id="@+id/main_float_button"
                android:layout_below="@id/header_Medicine"
                android:elevation="2dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_white_24dp"/> -->

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>